# cmd/rekor-server/app/serve.go
@@ -34,6 +34,8 @@ import (
 	rekord_v001 "github.com/sigstore/rekor/pkg/types/rekord/v0.0.1"
 	"github.com/sigstore/rekor/pkg/types/rpm"
 	rpm_v001 "github.com/sigstore/rekor/pkg/types/rpm/v0.0.1"
+	"github.com/sigstore/rekor/pkg/types/tuf"
+	tuf_v001 "github.com/sigstore/rekor/pkg/types/tuf/v0.0.1"
 )
 
 // serveCmd represents the serve command
@@ -66,6 +68,7 @@ var serveCmd = &cobra.Command{
 			rekord.KIND: rekord_v001.APIVERSION,
 			rpm.KIND:    rpm_v001.APIVERSION,
 			jar.KIND:    jar_v001.APIVERSION,
+			tuf.KIND:    tuf_v001.APIVERSION,
 		}
 
 		for k, v := range pluggableTypeMap {
