# openapi.yaml
@@ -268,6 +268,22 @@ definitions:
         - apiVersion
         - spec
       additionalProperties: false
+  tuf:
+    type: object
+    description: TUF metadata
+    allOf:
+    - $ref: '#/definitions/ProposedEntry'
+    - properties:
+        apiVersion:
+          type: string
+          pattern: ^(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$
+        spec:
+          type: object
+          $ref: 'pkg/types/tuf/tuf_schema.json'
+      required:
+        - apiVersion
+        - spec
+      additionalProperties: false
 
   jar:
     type: object
